Bug 117225 - LO 6.1 Writer will left a tmp file when ODT include formula.
Summary: LO 6.1 Writer will left a tmp file when ODT include formula.
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
: 117634 117656 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-25 09:16 UTC by odinatlas
Modified: 2020-08-30 06:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
left a tmp file.png (88.54 KB, image/png)
2018-04-25 09:19 UTC, odinatlas
Details
20180518_tmp_file.png (104.57 KB, image/png)
2018-05-19 14:15 UTC, odinatlas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description odinatlas 2018-04-25 09:16:40 UTC
Description:
LO 6.1 Writer edit and save odt, It will left a tmp file when ODT include formula.

Steps to Reproduce:
1.Use LO 6.1 Writer creat a odt file.
2.Insert formula.
3.Save odt file.
4.Writer will left a tmp file.

Actual Results:  
LO 6.1 Writer edit and save odt, It will left a tmp file when ODT include formula.

Expected Results:
Should not left tmp file.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
[Information automatically included from LibreOffice]
Locale: zh-TW
Module: StartModule
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: yes


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0
Comment 1 odinatlas 2018-04-25 09:19:10 UTC
Created attachment 141624 [details]
left a tmp file.png
Comment 2 Xisco Faulí 2018-04-25 09:43:30 UTC
Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 9c4eaa7b81a40d97fe49b85272b40bfeaaf44f86
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-16_03:31:36
Locale: es-ES (es_ES); Calc: group

but not in

Versión: 6.0.3.2
Id. de compilación: 8f48d515416608e3a835360314dac7e47fd0b821
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group
Comment 3 Xisco Faulí 2018-04-27 12:12:51 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-17 18:11:41 +0100
committer	Julien Nabet <serval2412@yahoo.fr>	2018-01-18 07:12:42 +0100
commit 27938e1bbd5f3405c47b9933be7489eeb03920f3 (patch)
tree 792f4df230b6364ef8eb578e647454648e2afd62
parent c915fdbfc77ac78d543bc097cd809edd7e6da8cb (diff)
sfx2 store: create temp files next to local files (storage case)
This is similar to commit 5259ab8104cfba60c40748ed0cd59d93df038c5b (sfx2
store: create temp files next to local files, 2018-01-08), except there
only the stream case was handled (e.g. sw HTML export), while this is
the storage case (e.g. ODT export).

Bisected with: bibisect-win32-6.1

Adding Cc: to Miklos Vajna
Comment 4 Commit Notification 2018-05-15 07:08:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1676204447df942e766c0780c1580e1f0427b73

tdf#117225 sfx2: fix leftover temp file when saving doc with embedded objects

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2018-05-15 09:50:51 UTC
No backport, the bug was master-only.
Comment 6 Julien Nabet 2018-05-16 09:03:34 UTC
*** Bug 117634 has been marked as a duplicate of this bug. ***
Comment 7 odinatlas 2018-05-19 14:14:47 UTC
This bug was not RESOLVED FIXED yet.

When Launch writer, 
create new odt,
insert formula and save as,
Writer will still left tmp file.

See Attachments "20180518_tmp_file.png".
Comment 8 odinatlas 2018-05-19 14:15:14 UTC
Created attachment 142208 [details]
20180518_tmp_file.png
Comment 9 Dieter 2018-05-19 16:29:33 UTC
*** Bug 117656 has been marked as a duplicate of this bug. ***
Comment 10 Dieter 2018-05-19 16:30:39 UTC
(In reply to odinatlas from comment #7)
> This bug was not RESOLVED FIXED yet.
> 
> When Launch writer, 
> create new odt,
> insert formula and save as,
> Writer will still left tmp file.
> 
> See Attachments "20180518_tmp_file.png".

If you also think, that this bug isn't resolved, please reopen it and add information about the version of the master where you still find the bug.
Comment 11 Miklos Vajna 2018-05-22 10:31:33 UTC
The above commit has a testcase that asserts that at least one type of this bug is fixed. If you find a bug that is related to this, please don't reopen this bug but open a new one and add details there. Thanks.
Comment 12 Xisco Faulí 2018-05-29 13:05:14 UTC
Hi Miklos,
I still reproduce it in

Version: 6.1.0.0.beta1+
Build ID: ee74e5638ace7daca188c55c29957ce92b289fbb
CPU threads: 16; OS: Windows 6.3; UI render: default; 
Locale: en-GB (en_GB); Calc: group threaded
Comment 13 Xisco Faulí 2018-05-29 13:06:16 UTC
*** Bug 117757 has been marked as a duplicate of this bug. ***
Comment 14 Xisco Faulí 2018-05-29 13:07:39 UTC
(In reply to Miklos Vajna from comment #11)
> The above commit has a testcase that asserts that at least one type of this
> bug is fixed. If you find a bug that is related to this, please don't reopen
> this bug but open a new one and add details there. Thanks.

Ok, I've just read this comment. Closing as RESOLVED FIXED and continuing the discussion in bug 117757
Comment 15 Brian Davis 2020-08-30 06:19:26 UTC Comment hidden (spam)